--- a/gitops/mistral-test/gradio-ui.yaml
+++ b/gitops/mistral-test/gradio-ui.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: gradio-ui
+  name: gradio-ui-test
   namespace: openshift-gitops
 spec:
   destination:
