--- a/gitops/mistral-test/mistral-app.yaml
+++ b/gitops/mistral-test/mistral-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: mistral-hf-tgi
+  name: mistral-hf-tgi-test
   namespace: openshift-gitops
 spec:
   destination:
